2010-10-07  John M Chambers  <jmc@r-project.org>

	* R/Module.R: modify cpp_refMethods to substitute the .External
	directly with the method and class pointers.

2010-10-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/stats/random/r*: Added comment reminding users
	read up on Section 6.3 of "Writing R Extensions" and the need to
	call GetRNGstate() and PutRNGstate() when using R's RNGs

2010-09-30  Romain Francois <romain@r-enthusiasts.com>

        * inst/include/Rcpp/vector/MatrixRow.h: Matrix row inherits
	VectorBase so that it becomes a sugar expression, so that we can do
	something like this:
          NumericMatrix x( ... ) ;
          NumericVector x0 = x.row(0) ;

        * inst/include/Rcpp/vector/MatrixColumn.h: idem for columns
 
        * cleanup: run make clean in the inst/doc directory to install
        the fake vignettes

2010-09-27  Romain Francois <romain@r-enthusiasts.com>

        * inst/include/Rcpp/traits/is_sugar_expression.h: new trait class
        to recognize sugar expressions

        * inst/include/Rcpp/vector/Vector.h: operator=( sugar expression)
        no longer allocate unnecessary memory.

2010-09-26  Romain Francois <romain@r-enthusiasts.com>

        * inst/include/Rpp/Fast.h: new helper class Rcpp::Fast that allows
        faster indexing of Vector

        * inst/include/Rcpp/sugar/operators/plus.h: port to operator+ the same
        improvements than in operator*

2010-09-25  Romain Francois <romain@r-enthusiasts.com>

        * inst/include/Rcpp/routines.h: declare routines that are registered

        * src/Rcpp_init.c: register routines

        * R/*.R: use registration information in many .Call and .External
	functions to speed things up

        * inst/include/Rcpp/RangeIndexer.h: experimenting with loop unrolling

2010-09-24  John M Chambers  <jmc@r-project.org>

	* R/Module.R: modify cpp_fields to substitute the .Call
	directly with the field and class pointers; supplements the